[project]
name = "terraform-code-generator"
version = "0.1.0"
description = "This project aims to create a chatbot of ai for infrastructure provisioning with Terraform."
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
