[project]
name = "terraform-code-generator"
version = "0.1.0"
description = "This project aims to create a chatbot of ai for infrastructure provisioning with Terraform."
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "streamlit (>=1.48.1,<2.0.0)",
    "crewai (>=0.165.1,<0.166.0)",
    "langchain-openai (>=0.3.31,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[tool.isort]
profile = "black"
